<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/ttl"
        android:background="@color/teal_200">
        <TextView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCar"
            android:text="@string/tvCar"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:layout_margin="3dp"
                android:text="@string/filter"
                android:id="@+id/filter"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
        </LinearLayout>


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="2">

        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/fabric"
            android:id="@+id/edTextFabric"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="NestedWeights" />

        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/type"
            android:id="@+id/edTextType"
            android:inputType="text"
            android:importantForAutofill="no" />

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:id="@+id/add_auto"
            android:text="@string/addAuto"
            android:layout_gravity="center_vertical"
            style="?android:attr/defaultFocusHighlightEnabled" />

        <Button
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/allText"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/allText"
            style="?android:attr/defaultFocusHighlightEnabled"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/delete"
            android:text="@string/delete"
            style="?android:attr/defaultFocusHighlightEnabled" />

        <Button
            android:textSize="12sp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sortPrice"
            android:text="@string/Sort"
            style="?android:attr/defaultFocusHighlightEnabled" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleFirst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1.1"
                android:text="@string/number"
                android:textAlignment="center" />

            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:id="@+id/titleZero"
                android:layout_width="match_parent"
                android:text="@string/fabric"
                android:textAlignment="center"/>
            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:id="@+id/titleSecond"
                android:layout_width="match_parent"
                android:text="@string/model"
                android:textAlignment="center"/>

            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:id="@+id/titleThird"
                android:layout_width="match_parent"
                android:text="@string/price"
                android:textAlignment="center"/>

            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:id="@+id/titleFourth"
                android:layout_width="match_parent"
                android:text="@string/maxSpeed"
                android:textAlignment="center"/>

            <TextView
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:id="@+id/titleFifth"
                android:layout_width="match_parent"
                android:text="@string/country"
                android:textAlignment="center"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recView" />
    </LinearLayout>

</LinearLayout>