<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minHeight="200dp"
    android:minWidth="300dp">

    <LinearLayout
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

    <TextView
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/numbItemInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:textAlignment="center"
        android:hint="@string/numbItem"
        android:layout_weight="1"
        android:id="@+id/edit_del"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:digits="0123456789"
        android:importantForAutofill="no"
        android:inputType="text" />
    </LinearLayout>

    <Button
        android:backgroundTint="@color/grey"
        android:text = "@string/delete"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_del"/>

</LinearLayout>

